Populating other info pages

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -1,3 +1,5 @@
 {
-    
+    "WELCOME": "Benvenuto nell'app Ionic Location Based Augmented Reality.",
+    "AR_MODULES": "L'applicazione propone un'implementazione di realtà aumentata basata su geolocalizzazione home made per mezzo di:<br><ul><li>sensori di movimento (accelerometro, gisoscopio e magnetometro),</li><li>sistema di posizionamento geolocalizzato (gps)</li><li>un servizio Rest che restituisce un elenco di punti di interesse (POI) da mostrare.</li></ul><br>I sensori di movimento sono stati ottimizzati mediante un sistema di filtraggio complementare chiamato Sensor Fusion, implementazione in typescript di quanto documentato da Paul Lawitzki al seguente link: <a href=\"http://plaw.info/articles/sensorfusion\" target=\"_system\">http://plaw.info/articles/sensorfusion</a>.<br><br>La chiamata Rest è di tipo GET e restituisce i POI nei dintorni dell'utente. Pertanto come parametri di input richiede la latitudine e longitudine dell'osservatore, e il raggio massimo entro cui ricercare i POI.<br><br>Nell'app è presente una mappa per inserire a runtime dei marker di prova a solo scopo di debug.",
+    "GO_TO_ALGORITHM": "Vai all'algoritmo"
 }
