--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,5 @@
 {
-    
+    "WELCOME": "Welcome in the Ionic Location Based Augmented Reality app.",
+    "AR_MODULES": "The app is an home made implementation of a location based AR that uses:<br><ul><li>device motion sensors (accelerometer, gyroscope, magnetometer),</li><li>global positioning system (gps)</li><li>a Rest service to retrieve a points of interest list (POI) to show.</li></ul><br>Motion sensors data is optimized using a complementary filter called Sensor Fusion; it consists of a typescript implementation of Paul Lawitzki's work explained at the link: <a href=\"http://plaw.info/articles/sensorfusion\" target=\"_system\">http://plaw.info/articles/sensorfusion</a>.<br><br>The Rest service is a simple GET call to retrieve user's nearby POIs. It takes user's latitude, longitude and a POI maximum radius as input parameters.<br><br>The app also includes a map to insert on touch some test markers at runtime with debug and test purposes only.",
+    "GO_TO_ALGORITHM": "Go to the algorithm"
 }
