--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,5 +11,6 @@
     "LOCATION_PERMISSION_NOT_GRANTED": "Please authorize requested services permissions to let the correct functionalities of ar system",
     "CAMERA_PERMISSION_NOT_GRANTED": "Please authorize requested services permissions to let the correct functionalities of ar system",
     "CAMERA_SYSTEM_NOT_FOUND": "An error occurred with the device camera system. Augmented reality system can't be enabled",
-    "LOCATION_SERVICE_DISABLED": "Please enable gps system to let the correct functionalities of ar system"
+    "LOCATION_SERVICE_DISABLED": "Please enable gps system to let the correct functionalities of ar system",
+    "CONNECTION_ERROR_ON_RETRIEVE": "An error occured retrieving data. Please verify your connection"
 }
